@@ -1,4 +1,9 @@
-$Id: CHANGES,v 1.23 2003/06/10 20:23:50 psavola Exp $
+$Id: CHANGES,v 1.24 2003/09/11 19:06:53 psavola Exp $
+
+09/11/2003	When starting up, check if the MAC address is all zero
+		(could happen e.g. with bridge interfaces with no attached
+		physical interfaces), and warn if so. For more information,
+		http://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=103469
 
 06/10/2003	When chrooting, check the possible return code 
 		from chdir("/").
